syntax = "proto3";

option csharp_namespace = "ToDo.API.Protos";

package greet;
import "google/protobuf/empty.proto";

// The greeting service definition.
service MissionItemService {
  // Sends a greeting
  rpc CreateMissionItem (CreateMissionItemReq) returns (CreateRes);

  rpc GetCompletedMissionkItem (google.protobuf.Empty) returns (GetCompletedMissionItemsResponse);

}

// The request message containing the user's name.
message CreateMissionItemReq {
  string name = 1;
  string description = 2;
}

// The response message containing the greetings.
message CreateRes {
  string message = 1;
}

message MissionItem {
    string name = 1;
    string description = 2;
    string status = 3; 
}

message GetCompletedMissionItemsResponse {
    repeated MissionItem missionItems = 1;
}